[package]
name = "reaper-arpad"
version = "0.1.0"
edition = "2021"

[dependencies]
reaper-medium = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
reaper-low = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
reaper-macros = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
enumflags2 = "0.7.4"
c_str_macro = "1.0.3"
fragile = "2.0.1"
rosc = "~0.10"
crossbeam-channel = "0.5.15"

[lib]
name = "reaspill"
crate-type = ["cdylib"]
